--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Greetings.  My name is Adam.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born and raised in Grosse Pointe, MI.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Photography, guitar building, audio production.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>That's a good question.  I can't even be certain a "dream job" for me exists yet.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Winter Garden, FL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Coding has always fascinated me.  I think it's an in-demand skill set that combines creativity with technical skill.</p>
     </section>
 
     <footer id="footer">
